# AutiBloom

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fix_h5p.py  main.py  manage.py  pyproject.toml  requirements.txt  setup_test_data.py  setup_users.py  test_e2e.py  update_h5p.py
accounts/: adapters.py  admin.py  apps.py  context_processors.py  forms.py  models.py  permissions.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_add_tracking_start_date.py  0002_profile_symptomtracking_delete_user_and_more.py  0003_user_address_user_avatar_user_bio_user_date_of_birth_and_more.py
accounts/templates/: 403.html
appointments/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_alter_appointment_preferred_time_window.py  0003_medicalreport_auditlog_timestamps.py
autibloom/: asgi.py  settings.py  urls.py  wsgi.py
chatbot/: models.py  tests.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py  0002_alter_chatmessage_options_alter_chatsession_options_and_more.py
community/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
community/migrations/: 0001_initial.py  0002_message_is_read.py  0003_message_read_at.py
core/: settings.py  urls.py  views.py
games/: admin.py  models.py  tests.py  urls.py  views.py
ml/: __init__.py  inference.py
symptoms/: models.py  urls.py  views.py
templates/: base.html  dashboard.html
wellbeing/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+81 files in other folders)
