[project]
name = "autibloomplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.0",
    "django==6.0.1",
    "django-allauth[socialaccount]>=65.16.1",
    "dotenv>=0.9.9",
    "google-genai>=1.73.1",
    "gunicorn>=25.3.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "playwright>=1.50.0",
    "psycopg2-binary==2.9.11",
    "pymupdf>=1.27.2.2",
    "scikit-learn==1.6.1",
    "shap>=0.45.0",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
]
